语法分析读入词法分析的token